# et-heatmap-v2

./: .dockerignore  .env.example  .env.production.example  .gitignore  AGENTS.md  COMPLETION_SUMMARY.md  DEPLOYMENT.md  Dockerfile  FEATURES.md  Makefile  NEXT_STEPS.md  PRODUCTION_CHECKLIST.md  QUICKSTART.md  README.md  SETUP_REDDIT.md  SYSTEM_STATUS.md  VERIFICATION.md  corecatalog.sql  docker-compose.prod.yml  docker-compose.yml  folders.pgsql  psd.md  pyproject.toml  test_reddit.py
.cursor/rules/: build-journey.mdc
.github/workflows/: ci-cd.yml
config/: news_domains.txt  pinned_entities.json  sources.yaml  subreddits.txt  weights.yaml
docs/: DEPLOYMENT.md  DOCKER_QUICK_REFERENCE.md  MONITORING_AND_BACKUP.md  UI_IMPROVEMENTS_IMPLEMENTED.md
docs/journey/: JOURNEY.md
nginx/: nginx.prod.conf
schemas/: api.drilldown.schema.json  api.resolve_queue.schema.json  api.snapshot.schema.json  db.entity_catalog.schema.json  db.schema.sql
scripts/: backup_database.py  check_run.py  check_snapshot.py  deploy.sh  migrate_db.py  run_api.py  run_dev.ps1  run_dev.sh  run_pipeline.py  setup.py  setup_backup_cron.sh  test_pipeline.py  test_transcript.py  test_youtube.py  validate_config.py
src/: __init__.py
src/app/: main.py
src/app/api/: routes_entity.py  routes_resolve_queue.py  routes_runs.py  routes_snapshot.py
src/app/service/: entity_service.py  resolve_queue_service.py  run_service.py  snapshot_service.py
src/catalog/: __init__.py  alias_tools.py  catalog_loader.py  imdb_tmdb_enrich.py  wikidata_enrich.py
src/common/: config.py  constants.py  logging.py  types.py  youtube_quota.py
src/nlp/: __init__.py
src/nlp/sentiment/: f1_sentiment.py  f2_support.py  f3_desire.py  target_sentiment.py
src/nlp/themes/: __init__.py  cluster.py  embed.py
src/nlp/utils/: __init__.py  text.py  time.py
src/pipeline/: daily_run.py  weekly_baseline.py
src/pipeline/steps/: aggregate_entity_day.py  build_drivers.py  build_resolve_queue.py  build_themes.py  compute_axes.py  compute_baseline_fame.py  dedupe_docs.py  entity_resolver.py  extract_mentions.py  ingest_et_youtube.py  ingest_gdelt_news.py  ingest_reddit.py  ingest_wikipedia_pageviews.py  (+4 more)
src/resolution/: entity_resolver.py
src/storage/: db.py
tests/integration/: test_pipeline.py
ui/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
ui/src/: index.css
(+32 files in other folders)
